Made dialog boxes use Holo theme when possible, cleaned up a lot of dialog layouts to look nicer